# AI-QnA

./: FRONTEND_SETUP.md  README.md  app.db  init_db.py  pyproject.toml  requirements.txt
app/: main.py  main_minimal.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  documents.py  questions.py  rl.py  users.py
app/core/: config.py  exceptions.py  security.py
app/db/: base.py  session.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: document_processor.py  qa_service.py  rl_service.py  user_service.py
frontend/: README.md  index.html  script.js  styles.css
