[tool.poetry]
name = "fastapi-qa"
version = "0.1.0"
description = "AI Document Q&A System"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.2"
uvicorn = "0.22.0"
pydantic = "1.10.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 